css/image-resources.css
footer {
    clear: both;
    position: relative;
    height: 130px;
}

@keyframes bounce {
	0%, 100%, 20%, 50%, 80% {
		-webkit-transform: translateY(0);
		-ms-transform:     translateY(0);
		transform:         translateY(0)
	}
	40% {
		-webkit-transform: translateY(-30px);
		-ms-transform:     translateY(-30px);
		transform:         translateY(-30px)
	}
	60% {
		-webkit-transform: translateY(-15px);
		-ms-transform:     translateY(-15px);
		transform:         translateY(-15px)
	}
}

.emailft {  
  position: absolute;
  top: 30%;
  left: 48.8%;
  display: inline-block;
  margin: -9px;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  animation-iteration-count: 1;
  -webkit-animation-iteration-count: 1;
}

.githubft {  
  position: absolute;
  top: 34%;
  left: 50%;
  display: inline-block;
  margin: 7px;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  animation-iteration-count: 1;
  -webkit-animation-iteration-count: 1;
}

span:hover {
  cursor: pointer;
  animation-name: bounce;
  -moz-animation-name: bounce;
}

#resources img {
  border: 1px solid #000;
}
.circle img {
transition: 1s ease;
}

.circle img:hover {
border-radius:45%;
transition: 1s ease;
}

.btn {
  background-color: #4caf50;
  border: none;
  color: white;
  padding: 12px 16px;
  font-size: 16px;
  cursor: pointer;
}

.btn:hover {
  background-color: RoyalBlue;
  transition: all 0.25s ease;
}

.zippia {
  margin-left: -12%;
}

@media screen and (max-width: 940px) {
	.btn {
    width: 100%;
    height: 100%;
	}
  #resources img {
    width: 30%;
    height: 30%;
  }
  .zippia {
    margin-left: -15%;
    margin-right: -3%;
  }
	}

  @media screen and (max-width: 1400px) {
    #resources img {
      width: 30%;
      height: 30%;
    }
    }

